Update client dashboard and regenerate api schemas and routes
